Added new Student Section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <a href="#">Courses</a>
         <a href="#">Admissions</a>
         <a href="#">Contact</a>
+        <a href="#">Student Section</a>
     </nav>
 
     <div class="hero">
