--- a/index.html
+++ b/index.html
@@ -9,18 +9,32 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f0f0f0;
         }
 
         header {
-            background-color: #003366;
+            background-color: #0d47a1;
             color: white;
-            padding: 15px 0;
+            padding: 20px 0;
             text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        header::before {
+            content: '';
+            background: linear-gradient(135deg, #42a5f5, #1e88e5);
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+            z-index: -1;
         }
 
         nav {
-            background-color: #00509e;
+            background-color: #1976d2;
             padding: 10px 0;
             text-align: center;
         }
@@ -37,7 +51,7 @@
         }
 
         .hero {
-            background-image: url('https://via.placeholder.com/1200x400?text=Parul+University');
+            background-image: url('https://via.placeholder.com/1200x400/0d47a1/ffffff?text=Parul+University');
             background-size: cover;
             background-position: center;
             height: 400px;
@@ -46,6 +60,19 @@
             justify-content: center;
             color: white;
             text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        .hero::before {
+            content: '';
+            background: rgba(0, 0, 0, 0.5);
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
         }
 
         .hero h1 {
@@ -62,21 +89,52 @@
         .section {
             margin-bottom: 40px;
             text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        .section::before {
+            content: '';
+            background: linear-gradient(135deg, #ef5350, #e53935);
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+            z-index: -1;
+            opacity: 0.8;
         }
 
         .section h2 {
             font-size: 30px;
-            color: #00509e;
+            color: white;
             margin-bottom: 20px;
+            position: relative;
         }
 
         .section p {
             font-size: 18px;
-            color: #333;
+            color: white;
+            position: relative;
+        }
+
+        .courses {
+            background-color: #ffeb3b;
+            color: #212121;
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .join-us {
+            background-color: #00e676;
+            color: #212121;
+            padding: 20px;
+            border-radius: 10px;
         }
 
         footer {
-            background-color: #003366;
+            background-color: #0d47a1;
             color: white;
             padding: 10px 0;
             text-align: center;
@@ -94,7 +152,6 @@
         <a href="#">Courses</a>
         <a href="#">Admissions</a>
         <a href="#">Contact</a>
-        <a href="#">Student Section</a>
     </nav>
 
     <div class="hero">
@@ -102,12 +159,12 @@
     </div>
 
     <div class="container">
-        <div class="section">
+        <div class="section courses">
             <h2>About Parul University</h2>
             <p>Parul University is a multidisciplinary hub of learning and innovation. Our campus offers a diverse range of programs and a vibrant community of students and faculty.</p>
         </div>
 
-        <div class="section">
+        <div class="section join-us">
             <h2>Our Courses</h2>
             <p>Explore a wide array of courses across various disciplines including Engineering, Management, Pharmacy, Arts, and Sciences. Our curriculum is designed to provide a blend of theoretical knowledge and practical skills.</p>
         </div>
